--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,9 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		
+        <finalName>spring</finalName>
+  
 	</build>
 
 </project>
